--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/mysql?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/photosquare?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=adminadmin
